<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/background_gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title"
        android:textSize="24sp"
        android:textColor="#333333"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-light"/>

    <EditText
        android:id="@+id/resetPassword_emailOrPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_or_phone_hint"
        android:padding="12dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#333333"
        android:textColorHint="#777777"/>

    <Button
        android:id="@+id/resetPassword_resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_button_text"
        android:textColor="#FFFFFF"
        android:paddingStart="32dp"
        android:paddingTop="14dp"
        android:paddingEnd="32dp"
        android:paddingBottom="14dp"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:elevation="3dp"/>

</LinearLayout>